--- a/man/man1/crate.1
+++ b/man/man1/crate.1
@@ -1,7 +1,7 @@
 '\" t
 .pc
 
-.TH CRATE 1 "2024-06-01" "1.0.0" "Crate programming language"
+.TH CRATE 1 "2024-07-04" "1.0.0" "Crate programming language"
 
 .\" The name
 .SH NAME
@@ -83,7 +83,7 @@ and
 .I will not 
 do anything 
 .I except 
-parsing. 
+lexially analyizing. 
 On the other hand, when it is completed, it will be a language geared toward containerized programming and data analysis. Moreover, the
 .B crate
 environment will provide an 
